@@ -1,3 +1,7 @@
+Sat Oct  2 22:59:32 2010  Masaki Suketa <masaki.suketa@nifty.ne.jp>
+
+	* test/win32ole/test_thread.rb: add for win32ole with Thread.
+
 Thu Sep 30 16:11:08 2010  NAKAMURA Usaku  <usa@ruby-lang.org>
 
 	* win32/win32.c (rb_w32_getenv): should return NULL if specified name
